# pydantic-ai-helpers

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: _config.yml  index.md
docs/examples/: advanced_patterns.py  basic_usage.py
examples/: advanced_patterns.py  basic_usage.py  media_and_system_prompts.py
scripts/: generate_test_conversations.py
src/pydantic_ai_helpers/: __init__.py  history.py  py.typed
tests/: __init__.py  conftest.py  test_history.py
tests/test_conversations/: code_review_with_tools.json  context_switching.json  creative_writing_4turns.json  dice_game_with_tools.json  math_tutor_structured.json  simple_multiturn.json  single_turn_simple.json
